@@ -1,3 +1,8 @@
+2001-07-17  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-dir.c (capplet_cancel_cb):
+	(capplet_ok_cb): Explicitly unref the property control
+
 2001-07-13  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-dir.c (capplet_control_launch): Accept window_title
